--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://huchunfang.github.io/nothing/'
 languageCode = 'en-us'
 title = '巴以冲突'
 theme = 'ananke'
